made more changes to the home page by fixing font and spacing

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -33,8 +33,8 @@ Fonts are separated by a & */
 body {
   max-width: 960px;
   margin: 0 auto;
-  padding: 4em;
-  font-size: 18px;
+  padding: 0;
+  font-size: 22px;
   text-align: center;
 }
 img {
@@ -48,6 +48,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 h2 {
   text-align: center;
+  margin: 0;
 }
 hr {
   height: 3px;
@@ -162,4 +163,20 @@ nav a:hover {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+.home-title {
+  font-family: var(--heading-font);
+  font-size: 2em;
+}
+.book,
+.join {
+    font-size: 18px;
+}
+
+.msg p {
+    font-size: 0.8em;
+}
+.msg {
+    line-height: 1.5em;
+    background-color: var(--paragraph-background-color);
 }
