--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,44 +1,261 @@
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
+
+@import url('https://fonts.googleapis.com/css2?family=Gravitas+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
+:root {
+  --primary-color: #38618C;
+  --secondary-color: #E5B25D;
+  --accent1-color: #523A34;
+  --accent2-color: white;
+
+  --heading-font: "Gravitas One";
+  --paragraph-font: Inter, Helvetica, sans-serif;
+
+  --headline-color-on-white: #38618C;  
+  --headline-color-on-color: white; 
+  --paragraph-color-on-white: #523A34; 
+  --paragraph-color-on-color: white; 
+  --paragraph-background-color: #396E94;
+  --nav-link-color: #396E94;
+  --nav-background-color: #F2DD6E;
+  --nav-hover-link-color: white;
+  --nav-hover-background-color: #396E94;
 }
+
+body {
+  background-color: #fcfbfb;
+  font-family: var(--paragraph-font);
+  font-size: 22px; 
+  margin: 0;
+  padding: 0;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 4em;
+  text-align: center;
+}
+
+h2 {
+  margin: 0;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+  max-width: 300px;
+  box-sizing: border-box; 
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--heading-font);
+  color: var(--headline-color-on-white);
+}
+
+h2 {
+  text-align: center;
+}
+
+.home-title {
+  font-family: var(--heading-font);
+  font-size: 2em; 
+  margin-top: 10px;
+}
+
+.msg h2 {
+  font-family: var(--heading-font);
+}
+
+p {
+  font-family: var(--paragraph-font);
+  color: var(--paragraph-color-on-white);
+  padding: 1em;
+}
+
+.msg {
+  background-color: var(--paragraph-background-color);
+  line-height: 1.5em; 
+  padding: 35px;
+}
+
+.msg p {
+  font-size: 0.8em;
+  padding-bottom: 15px;
+}
+
+.book,
+.join {
+  font-size: 18px;
+  padding: 15px 30px;
+  margin-top: 50px;
+  border-radius: 5px;
+  background-color: #d9c2a3;
+  color: black;
+  text-decoration: none;
+}
+
+header {
+  padding: 1em;
+  text-align: center;
+  color: var(--headline-color-on-color);
+  background-color: rgba(20, 30, 13, 0.7);
+}
+
+header > h1,
+header > h2 {
+  color: var(--headline-color-on-color);
+}
+
+#logo_link {
+  padding-top: 5px;
+}
+
+nav {
+  background-color: var(--nav-background-color);
+  line-height: 3em;
+  text-align: center;
+  font-size: 1.2em;
+  display: flex;
+  list-style-type: none;
+}
+
 nav a {
-    text-align: center;
+  text-decoration: none;
+  color: var(--nav-link-color);
+  text-align: center;
+  padding: 35px;
+  min-width: 120px;
+}
+
+nav a:hover {
+  color: #d9c2a3;
+  background-color: black;
+  text-decoration: none;
+}
+
+#content {
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
 #hero-msg h1,
 #hero-msg h4 {
-    text-align: center;
+  text-align: center;
 }
 
 .button-box {
-    text-align: center;
+  text-align: center;
 }
 
 main section {
-    text-align: center;
+  text-align: center;
 }
 
 #background {
-    height: 725px;
+  height: 725px;
 }
-body {
-    background-color: #fcfbfb;
-}
-header {
-    background-color:rgba(20, 30, 13, .7);
-}
-nav a:hover {
-    background-color: black;
-    color: #d9c2a3;
-    text-decoration: none;
-}
+
 #hero-img.icon {
-    width: 80px;
+  width: 80px;
 }
+
+.sitemap {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(6, 15%);
+  grid-template-rows: 3em 1.5em 1.5em 3em;
+  grid-template-areas: 
+    ". . home home . ."
+    ". . . top . ."
+    ". left left right right ."
+    "page2 page2 . . page3 page3";
+}
+
+.sitemap > div {
+  text-align: center;
+}
+
+.sm-home {
+  grid-area: home;
+  background-color: #ccc;
+  line-height: 3em;
+}
+
+.sm-page2 {
+  grid-area: page2;
+  background-color: #ccc;
+  line-height: 3em;
+}
+
+.sm-page3 {
+  grid-area: page3;
+  background-color: #ccc;
+  line-height: 3em;
+}
+
+.top {
+  grid-area: top;
+  border-left: 1px solid;
+}
+
+.left {
+  grid-area: left;
+  border-top: 1px solid;
+  border-left: 1px solid;
+}
+
+.right {
+  grid-area: right;
+  border-top: 1px solid;
+  border-right: 1px solid;
+}
+
+.colors {
+  width: 100%;
+  min-width: 350px;
+  margin: 30px auto;
+  text-align: center;
+}
+
+.colors th {
+  background-color: #999;
+}
+
+.colors td {
+  width: 25%;
+  height: 3em;
+}
+
+.primary { background-color: var(--primary-color); }
+.secondary { background-color: var(--secondary-color); }
+.accent1 { background-color: var(--accent1-color); }
+.accent2 { background-color: var(--accent2-color); }
+
+p.colored {
+  background-color: var(--paragraph-background-color);
+  color: var(--paragraph-color-on-color);
+}
+
+
+.card-img {
+  border: 10px solid #d9c2a3;
+}
+
+main section img {
+  box-sizing: border-box;
+}
+
+footer {
+  padding: 25px 50px;
+  margin-top: 200px;
+}
+
 footer p {
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
+
 footer p a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
+}
+
+footer .social img {
+  padding-top: 15px;
 }
